# Testev.01

./: .gitignore  .replit  agente_02.py  agente_03.py  agente_05.py  agente_07.py  agente_11.py  agente_13.py  agente_17.py  agente_19.py  agente_23.py  agente_29.py  agente_31.py  agente_37.py  agente_41.py  agente_43.py  agente_47.py  agente_53.py  agente_59.py  agente_61.py  agente_67.py  agente_71.py  agente_73.py  agente_79.py  agente_83.py  agente_89.py  agente_97.py  agente_arqueologo.py  agente_arsenal.py  agente_escriba.py  agente_ia.py  agente_janus.py  agente_vetohere.py  exercito.css  exercito.py  index.html  janus.json  main.py  pyproject.toml  replit.md  (+2 more)
