[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.18.0",
    "fastapi>=0.116.2",
    "gitpython>=3.1.45",
    "google-api-python-client>=2.182.0",
    "google-auth>=2.40.3",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.11.9",
    "pytz>=2025.2",
    "textual>=6.1.0",
    "uvicorn>=0.35.0",
]
